--- a/dev/checkout.html
+++ b/dev/checkout.html
@@ -1,4 +1,6 @@
 <html>
     <p class="checkout_item" hidden></p>
+
+    <script src="https://xsvcompulsive.github.io/xscript/lib/sessions.js"></script>
     <script src="checkout.js"></script>
 </html>
