--- a/dev/session_cart.html
+++ b/dev/session_cart.html
@@ -5,5 +5,7 @@
 
     <a href="checkout.html">Go to checkout</a>
 
+    <script src="https://xsvcompulsive.github.io/xscript/lib/sessions.js"></script>
     <script src="session_cart.js"></script>
+    
 </html>
