--- a/dev/checkout.html
+++ b/dev/checkout.html
@@ -1,6 +1,13 @@
 <html>
-    <p class="checkout_item" hidden></p>
+<div>
+    <div class="checkout-item" hidden></div>
+    
+</div>
 
-    <script src="https://xsvcompulsive.github.io/xscript/lib/sessions.js"></script>
-    <script src="checkout.js"></script>
+<p class="price-total" hidden></p>
+
+<button class="remove-btn" item-name="" hidden>Remove</button>
+<script src="https://xsvcompulsive.github.io/xscript/lib/sessions.js"></script>
+<script src="checkout.js"></script>
+
 </html>
