--- a/dev/session_cart.html
+++ b/dev/session_cart.html
@@ -1,11 +1,11 @@
 <html>
-    <button class="item_btn" item-attr="a">Add item A</button>
-    <button class="item_btn" item-attr="b">Add item B</button>
-    <button class="item_btn" item-attr="c">Add item C</button>
+<button class="item_btn" item-name="course a" item-price="10">Add item A</button>
+<button class="item_btn" item-name="course b" item-price="20">Add item B</button>
+<button class="item_btn" item-name="course c" item-price="30">Add item C</button>
 
-    <a href="checkout.html">Go to checkout</a>
+<a href="checkout.html">Go to checkout</a>
 
-    <script src="https://xsvcompulsive.github.io/xscript/lib/sessions.js"></script>
-    <script src="session_cart.js"></script>
-    
+<script src="https://xsvcompulsive.github.io/xscript/lib/sessions.js"></script>
+<script src="session_cart.js"></script>
+
 </html>
